# Multi-Platform-Live-Streaming-v2.0

./: netlify.toml  package-lock.json  package.json  preload.js  startup.js  tailwind.config.js  vite.config.ts
dist-electron/: electron.js  preload.js
my-rtmp-server/: .env  README-Multi-Platform.md  README-ง่าย.md  config-server.js  config-ui.html  debug-simple-server.js  debug-youtube.js  easy-setup.bat  manage.js  manual-youtube-test.js  multi-platform-server.js  open-config-ui.bat  package-lock.json  package.json  platforms-config.json  react-to-youtube-server.js  server.js  simple-rtmp-server.js  simple-server.js  start-multi-platform.bat  start-relay.js  start-server.bat  start-simple-server.bat  start-streaming.bat  start-user1.bat  start-user2.bat  test-config.js  test-react-stream.js  test-react-to-youtube.js  test-streaming.js  test-youtube-connection.js  user-stream-keys.json  youtube-relay-fix.js
server/: .env.production  env.txt  package-lock.json  server.js
src/: App.css  App.tsx  electron.cjs  main.tsx  renderer.d.ts  types.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/node/: package-lock.json  package.json  server.js
src-tauri/node/config/: index.js  index.js.save
src-tauri/node/controllers/: authController.js  streamController.js
src-tauri/node/routes/: authRoutes.js  streamRoutes.js
src-tauri/src/: lib.rs  main.rs
src/components/: ChannelsTab.tsx  CommentsTab.tsx  ObsManagementPanel.tsx  RightPanel.tsx  ScenesPanel.tsx  SettingsTab.tsx  StreamDetailsModal.tsx
src/hooks/: useLocalStorage.tsx
(+3 files in other folders)
