[package]
name = "multi-platform-live-streaming"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "multi_platform_live_streaming_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] } # *** แก้ไขตรงนี้ ***
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ตรวจสอบให้แน่ใจว่าบรรทัด tauri-plugin-node และ tauri-plugin-opener หายไปแล้ว